--- a/src/stylesheets/motorcycles.css
+++ b/src/stylesheets/motorcycles.css
@@ -66,9 +66,7 @@
   }
 
   .motorcycles-main-container {
-    display: grid;
-    grid-template-columns: 15vw 85vw;
-    grid-template-rows: 100%;
+    display: flex;
   }
 
   .page-body {
