--- a/src/stylesheets/reservations.css
+++ b/src/stylesheets/reservations.css
@@ -112,6 +112,11 @@ td {
   height: 1rem;
 }
 
+tbody {
+  top: 5px;
+  vertical-align: top;
+}
+
 @media (max-width: 768px) {
   .reservations-main-container {
     display: flex;
